# beginning-cpp

./: .gitignore  CMakeLists.txt  README.md  create_project.sh  run_tests.sh
.circleci/: config.yml  setup_directory.sh
assignment1-letter-pyramid/src/: main.cpp
project1/src/: a.out  build.sh
section10-challenge/: compile.sh
section10-challenge/src/: main.cpp
section11-challenge/src/: main.cpp
section12-challenge/: CMakeLists.txt
section12-challenge/src/: CMakeLists.txt  main.cpp  print.cpp
section12-challenge/test/: CMakeLists.txt  main_tests  test_main.cpp
section13-challenge/: CMakeLists.txt
section13-challenge/src/: CMakeLists.txt  MainHelpers.cpp  MainHelpers.h  MovieLibrary.cpp  MovieLibrary.h  main.cpp  movie.cpp  movie.h  movies.cpp  movies.h  template
section13-challenge/test/: CMakeLists.txt  TestMain.cpp  TestMovie.cpp  TestMovieLibrary.cpp  movie_tests  test_main.cpp  test_movie.cpp  test_movies.cpp
section14-challenge1/: CMakeLists.txt
section14-challenge1/src/: CMakeLists.txt  Mystring.cpp  Mystring.h  main.cpp
section14-challenge1/test/: CMakeLists.txt  test_main.cpp
section14-challenge2/: CMakeLists.txt
section14-challenge2/src/: CMakeLists.txt  Mystring.cpp  Mystring.h  main.cpp  template
section14-challenge2/test/: CMakeLists.txt  test_main.cpp
section15-challenge/: CMakeLists.txt  README.md  build_run_tests.sh
section15-challenge/src/: CMakeLists.txt  account.cpp  account.h  savings_account.cpp  savings_account.h  template
section15-challenge/test/: CMakeLists.txt  test_account.cpp  test_main.cpp  test_runner  test_savings_account.cpp
section4/: build.sh  compile.sh  main
section4/challenge/src/: main.cpp
section4/compiler-warnings/src/: main.cpp
section4/first-program/src/: main.cpp
section4/project1/src/: main
section4/project2/src/: main  main.cpp
section6-challenge/: CMakeLists.txt  compile.sh  run_tests.sh
section6-challenge/src/: CMakeLists.txt  estimation_tool.cpp  estimation_tool.h  main.cpp
section6-challenge/test/: CMakeLists.txt  test_estimation_tool  test_estimation_tool.cpp  test_main  test_main.cpp
section7-challenge/src/: main.cpp
section8-challenge/src/: main.cpp
section9-challenge/src/: main.cpp
section9-experiment/src/: main.cpp
template/src/: CMakeLists.txt  main.cpp  print.h
template/test/: CMakeLists.txt
utils/random_integer/: CMakeLists.txt  random_integer_example.cpp
utils/random_integer/src/: CMakeLists.txt  random_integer.cpp  random_integer.h  random_integer_example
utils/random_integer/test/: CMakeLists.txt  random_integer_test.cpp
